[package]
name = "scurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
minreq = "2.11.0"
safenet = { version = "0.1.0", path = "../safenet", default-features = false, features = ["ring"] }
simple_logger = "4.3.0"
