[package]
name = "scurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
minreq = { version = "2.11.0", features = ["https"] }
safenet = { version = "0.1.0", git = "https://github.com/mateocabanal/safenet", default-features = false }
simple_logger = "4.3.0"

[features]
ring = ["safenet/ring"]
rust_crypto = ["safenet/rust_crypto"]

default = ["ring"]
